Доработал auto support